iPadのsafari用に画面上でも動作がわかるよう修正

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>popstateテスト</title>
 </head>
 <body>
+  <div id="displayTarget"></div>
   <script src="./popstate-test.js"></script>
 </body>
 </html>
