setIntervalのテスト追加

--- a/interval_test/interval.html
+++ b/interval_test/interval.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>popstateテスト</title>
+  <title>setIntervalテスト</title>
 </head>
 <body>
-  <h2>popstateテスト</h2>
+  <h2>setIntervalテスト</h2>
   <div id="displayTarget"></div>
-  <script src="./popstate_test.js"></script>
+  <script src="./interval_test.js"></script>
 </body>
 </html>
