--- a/interval_test/interval.html
+++ b/interval_test/interval.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h2>setIntervalテスト</h2>
+  <input type="text" name="sample" />
   <div id="displayTarget"></div>
   <script src="./interval_test.js"></script>
 </body>
