画面を開き直さなくても履歴を再描画できるように修正

--- a/pagehide_test/pagehide.html
+++ b/pagehide_test/pagehide.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <h2>pagehideテスト</h2>
-  <button type="button" id="resetButton">リセット</button>
+  <button type="button" id="displayResetButton">表示リセット</button>
+  <button type="button" id="dataResetButton">データリセット</button>
   <ul id="displayTarget"></ul>
   <script src="./pagehide_test.js"></script>
 </body>
