モーダルの表示内容変更

--- a/popup_test/index.html
+++ b/popup_test/index.html
@@ -9,6 +9,7 @@
   <h2>popup表示テスト</h2>
   <button type="button" id="alertModal">jsのアラート</button>
   <button type="button" id="confirmModal">jsの確認</button>
+  <button type="button" id="imageModal">画像モーダル</button>
   <button type="button" id="iframeModal">iframeモーダル</button>
   <script src="./popup_test.js"></script>
 </body>
